--- a/shared/components/QuizCard.less
+++ b/shared/components/QuizCard.less
@@ -20,7 +20,7 @@
 }
 
 .QuizCard__media {
-    min-height: 250px;
+    min-height: 200px;
     padding: 0;
 }
 
